k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: castuo-system
  labels:
    name: castuo-system
    app.kubernetes.io/managed-by: kubectl
